ubiquity (2.15.27) UNRELEASED; urgency=low

  [ Aurélien Gâteau ]
  * Fix going back through skipped steps in kde_ui frontend.

 -- Dmitrijs Ledkovs <xnox@ubuntu.com>  Fri, 18 Oct 2013 22:33:24 +0100

ubiquity (2.15.26) saucy; urgency=low

  [ Dmitrijs Ledkovs ]
  * Adding custom classes to EventBox somehow kills the install now
    button event. Instead use simple bg styling. (LP: #1240532)

  [ Colin Watson ]
  * Update translations from Launchpad.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 16 Oct 2013 18:30:55 +0100

ubiquity (2.15.25) saucy; urgency=low

  * Remove all cairo styling from partition boxes in automatic
    partitioning, instead use gtk3/css styling. (LP: #947107)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 16 Oct 2013 09:58:29 +0100

ubiquity (2.15.24) saucy; urgency=low

  [ Colin Watson ]
  * Move oem user removal from upstart & wrapper into
    oem-config-firstboot, after ubiquity-dm finished executing. (LP:
    #1231166) (LP: #1239471)

  [ Dmitrijs Ledkovs ]
  * Kill any remaining oem user process before removing oem user (session
    dbus leaves zombies). (LP: #1231166)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 14 Oct 2013 18:19:27 +0100

ubiquity (2.15.23) saucy; urgency=low

  * Attempt to remove oem user again in the oem-config/post-start, after
    oem-config-first-boot setup has been completed. (LP: #1231166)
  * Load U1 Terms & Conditions page lazily when asked, instead of at U1
    plugin import time. Thus the page will only be loaded once there is a
    working internet connection and the user is signing up for U1. This
    also resolves ubiquity failing to load when booting direct live user
    session. (LP: #1226912)
  * Instead of skipping u1 plugin when offline, display "No internet
    connectivity" page and show the login later button. Thus avoiding
    hanging when installing fully offline, and explaining why U1 login was
    not available. (LP: #1237694)